ensure top-level window's bounds are always reported in local coordinates, even in the middle of a window move. bug 24326. r:pinkerton.